Chore: Change referenced stylesheet and uncomment icon

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/styles/css_reset.css">
-  <link rel="stylesheet" href="/styles/sign-up.css">
-  <!-- <link rel="shortcut icon" href="/assets/chat_bubble.svg" type="image/x-icon"> -->
+  <link rel="stylesheet" href="/styles/index.css">
+  <link rel="shortcut icon" href="/assets/chat_bubble.svg" type="image/x-icon">
   <title>DevTalk</title>
 </head>
 <body>
