--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -10,5 +10,9 @@
 </head>
 <body>
   <h1>WELCOME!!!</h1>
+  <a href="/join">Join the devtalk club</a>
+  <a href="/logout">
+    Log Out
+  </a>
 </body>
 </html>
