Refactor: Remove required attribute to username field

--- a/views/log-in.ejs
+++ b/views/log-in.ejs
@@ -11,7 +11,7 @@
 <body>
   <form action="/login" method="POST">
     <label for="userName">
-      <input type="text" name="username" id="userName" required placeholder="username or email">
+      <input type="text" name="username" id="userName" placeholder="username or email">
     </label>
     <label for="password">
       <input type="password" name="password" id="password">
