--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,17 @@
   <title>DevTalk</title>
 </head>
 <body>
-  <h1>Index</h1>
+  <div class="body_container flex-center flex-col">
+    <h1>DevTalk</h1>
+    <span class="flex-center flex-row">
+      <a href="/login">
+        <div class="login">Login</div>
+      </a>
+      <a href="/sign-up">
+        <div class="sign-up">Sign up</div>
+      </a>
+    </span>
+  </div>
+
 </body>
 </html>
