--- a/views/log-in.ejs
+++ b/views/log-in.ejs
@@ -9,17 +9,22 @@
   <title>Document</title>
 </head>
 <body>
-  <form action="/login" method="POST">
-    <label for="userName">
-      <input type="text" name="username" id="userName" placeholder="username or email">
-    </label>
-    <label for="password">
-      <input type="password" name="password" id="password">
-    </label>
-    <button type="submit">Login</button>
-    <a href="/">
-      <div>Cancel</div>
-    </a>
-  </form>
+  <div class="body_container flex-center flex-col">
+    <form action="/login" method="POST" class="flex-center flex-col">
+      <label for="userName"> Username: 
+        <input type="text" name="username" id="userName" placeholder="username or email">
+      </label>
+      <label for="password"> Password: 
+        <input type="password" name="password" id="password">
+      </label>
+
+      <div class="flex-center flex-row">
+        <a href="/">
+          <div>Cancel</div>
+        </a>
+        <button type="submit">Login</button>
+      </div>
+    </form>
+  </div>
 </body>
 </html>
