--- a/public/styles/sign-up.css
+++ b/public/styles/sign-up.css
@@ -1,14 +1,60 @@
+:root {
+  background-color: #3a2828;
+  color: wheat;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+html, body, .body_container {
+  width: 100%;
+  height: 100%;
+}
+
 .flex-center {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.flex-col {
-  flex-flow: column nowrap;
+.flex-right {
+  justify-content: flex-end;
 }
 
 .flex-row {
   flex-flow: row nowrap;
 }
 
+.flex-col {
+  flex-flow: column nowrap;
+}
+
+.body_container {
+  height: fit-content;
+  padding: 5rem;
+}
+
+a > div, button {
+  color: wheat;
+  padding: .5rem 1rem;
+  border: .5px solid #614d4d;
+  width: min(8rem, 300px);
+  text-align: center;
+}
+
+a > div:hover, button:hover {
+  color: #3a2828;
+  background-color: wheat;
+  transition-duration: .5s;
+}
+
+button {
+  background-color: transparent;
+  cursor: pointer;
+}
+
+label {
+  text-align:start;
+}
+
+input {
+  min-width: 300px;
+}
