Feat: Allow a user to post a message

--- a/views/addMessage.ejs
+++ b/views/addMessage.ejs
@@ -15,7 +15,7 @@
         <input autofocus type="text" name="title" id="msg_title" placeholder="Message Title..." required>
       </label>
       <label for="msg_body" class="flex-center flex-col">
-        <textarea type="text" name="body" id="msg_body" placeholder="Message Body..." rows="3" cols=" 50"></textarea>
+        <textarea type="text" name="msg_body" id="msg_body" placeholder="Message Body..." rows="3" cols=" 50"></textarea>
       </label>
 
       <div class="flex-center flex-row">
