Chore: Update input field styling

--- a/public/styles/log-in.css
+++ b/public/styles/log-in.css
@@ -54,3 +54,21 @@ button {
   background-color: transparent;
 }
 
+input {
+  background-color: transparent;
+  border: none;
+  color: wheat;
+}
+
+input:hover {
+  background-color: #634a4a;
+}
+
+input::placeholder {
+  color: rgba(192, 180, 157, 0.651);
+}
+
+input:focus-within {
+  border-bottom: .5px solid rgba(192, 180, 157, 0.651);
+}
+
