--- a/views/log-in.ejs
+++ b/views/log-in.ejs
@@ -12,7 +12,7 @@
   <div class="body_container flex-center flex-col">
     <form action="/login" method="POST" class="flex-center flex-col">
       <label for="userName"> Username: 
-        <input type="text" name="username" id="userName" placeholder="username or email">
+        <input autofocus type="text" name="username" id="userName" placeholder="username or email">
       </label>
       <label for="password"> Password: 
         <input type="password" name="password" id="password">
