--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -13,7 +13,7 @@
     <form action="/sign-up" class="flex-center flex-col" onsubmit="return confirm('Are you sure???')" method="POST">
       
       <label class="flex-center flex-col" for="userName">Username:
-        <input type="text" name="userName" id="userName" placeholder="Username or email address" required>
+        <input  autofocus type="text" name="userName" id="userName" placeholder="Username or email address" required>
       </label>
       <label class="flex-center flex-col" for="firstName">First name:
         <input type="text" name="firstName" id="firstName" required>
